# quant-system

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
configs/: dev.yaml
data/: sample_prices.csv
docs/: README.md  actionable_paper_order_incident_2026-06-09.md  activated_dry_run_operator_rehearsal.md  activated_dry_run_request_inspection_rehearsal.md  activated_semantic_paper_operator_rehearsal.md  alpaca_paper_actionable_order_safety_remediation.md  alpaca_paper_adapter.md  alpaca_paper_schedule.md  alpaca_paper_smoke_execution.md  alpaca_paper_smoke_runbook.md  alpaca_paper_workflow.md  alpaca_paper_wrapper_run.md  architecture.md  architecture_second.md  autonomous_dry_run_authorization.md  autonomous_dry_run_rehearsal.md  broker_adapters.md  code_style.md  codex_project_handoff.md  console_deployment.md  console_future_roadmap.md  console_known_limits.md  console_remote_access.md  console_runbook.md  console_security_boundary.md  context.md  controlled_alpaca_paper_order_rehearsal_design.md  controlled_alpaca_paper_safety_rehearsal_preparation.md  current_system_status.md  data_quality.md  deployment.md  dry_run_trading.md  finite_autonomous_dry_run_loop_rehearsal.md  finite_supervised_provider.md  finite_supervised_provider_rehearsal.md  launchd_bootstrap_failure_diagnosis.md  launchd_controlled_load_rehearsal.md  launchd_disabled_load_rehearsal.md  launchd_filesystem_permission_diagnosis.md  launchd_first_natural_scheduled_run_review.md  (+97 more)
scripts/: run_alpaca_paper_refresh.sh  run_dry_run_refresh.sh  run_paper_signal.sh  run_paper_signal_refresh.sh  run_web_console.sh
site/: app.js  index.html  knowledge_index.json  progress.json  status.json  styles.css
tests/: test_activated_dry_run_cli.py  test_activated_semantic_paper_cli.py  test_activated_semantic_targets.py  test_activation_consumption_rehearsal.py  test_alpaca_optional_dependency.py  test_alpaca_paper_client.py  test_alpaca_paper_mapping.py  test_autonomous_dry_run.py  test_data_ingestion.py  (+70 more)
(+281 files in other folders)
