[project]
name = "quant-system"
version = "0.1.0"
description = "A small, typed, solo-maintainable quant research and trading system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "jinja2>=3.1",
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2.7",
    "typer>=0.12",
    "uvicorn>=0.34",
    "vectorbt>=0.28",
    "yfinance>=0.2",
     "markdown2>=2.5",
]

[project.optional-dependencies]
broker-alpaca = [
    "alpaca-py>=0.43.4",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "pyright>=1.1",
]

[project.scripts]
quant = "quant.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant"]

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
extend-select = ["D100", "D104"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingTypeStubs = "none"
